# SC203

./: .gitignore  CHANGELOG.md  DOCUMENTATION.md  FULL_DATASET_ANALYSIS.md  QUICKSTART.md  QUICK_START.md  README.md  README_GENERATE.md  RESULTS_HC3.md  RUN.bat  RUN.ps1  SUCCESS.md  Springer_Article_Template (AutoRecovered).docx  UPGRADE_SUMMARY.md  benchmark_hc3.py  cleanup_gecs.sh  cleanup_gecs_files.py  convert_all_hc3.py  environment.yml  evaluate_results.py  gecs.py  install_gecs.sh  iral_optimization_prompt_full.txt  main.py  pyproject.toml  requirements.txt  run.py  run_finance.py  run_gecs_analysis.py  run_with_gecs.py  utils.py  verify_gecs.py
.github/workflows/: ci.yml
benchmarks/: benchmark_pipeline.py
docs/: CLEANUP_SUMMARY.md  GECS_SUMMARY.md  PROJECT_GUIDE.md  Springer_Article_Template.docx
documents/: SC203_master_plan.txt
results/: human_vs_ai_augmented.csv
results_HC3_finance/: human_vs_ai_augmented.csv
results_HC3_finance_full/: human_vs_ai_augmented.csv
results_hc3/: human_vs_ai_augmented.csv
results_sample/: human_vs_ai_augmented.csv
scripts/: analyze_nominalization.py  convert_csv_to_json_gecs.py  convert_hc3_to_csv.py  install_gecs_deps.py
src/: __init__.py  clean.py  collocations.py  features.py  gec_score.py  ingest.py  nominalization.py  plots.py  pos_tools.py  run_pipeline.py  stats_analysis.py
tests/: test_clean_remove_citations.py  test_end_to_end_tiny.py  test_log_odds.py  test_nominalization.py  test_nominalization_modes.py  test_pipeline_smoke.py  test_stats_edge_cases.py  test_tokenize_pipe_equivalence.py
(+22 files in other folders)
